baml_language/crates/baml_tests/snapshots/diagnostic_errors/control_flow/baml_tests__diagnostic_errors__control_flow__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
function user.ElseIfChain(x: int) -> string  [expr] {
  {  } if (x Eq 1) { // [1] Case one } "one" else if (x Eq 2) { // [1] Case two } "two" else if (x Eq 3) { // [1] Case three } "three" else { // [1] Default case } "other"
}
function user.Headers() -> string  [expr] {
  { // [1] Setup; let x = 1; // [2] Configuration; let y = 2; // [1] Processing; let z = x Add y } z.to_string_BAML_NOT_A_METHOD()
}
function user.IfElseWithHeaders(flag: bool) -> string  [expr] {
  { // [1] Check flag } if (flag) { // [1] True branch } "yes" else { // [1] False branch } "no"
}
function user.LlmFunction(input: string, client: ai.Client? = null, on_event: (ai.events.Event) -> void? = null) -> string  [llm] {
  ai.Agent.new(client = client, on_event = on_event).run(LlmFunction@spec(input)).value
}
function user.LlmFunction@build_request(input: string, client: ai.Client? = null) -> baml.http.Request  [expr] {
  LlmFunction@spec(input).build_request(client = client)
}
function user.LlmFunction@parse(json: string) -> string  [expr] {
  baml.sap.parse(json)
}
function user.LlmFunction@render_prompt(input: string) -> ai.Prompt  [expr] {
  LlmFunction@spec(input).prompt()
}
function user.LlmFunction@spec(input: string) -> ai.FunctionSpec<string>  [expr] {
  ai.FunctionSpec { spec_name: "LlmFunction", args: map { "input": input }, prompt_template: ( __spec_output_format: ai.OutputFormat) -> { { let ctx = ai.internal.SpecCtx { _output_format:  __spec_output_format }; let  __spec_tagged_prompt = { let  __tt_parts: string[] = []; let  __tt_values: unknown[] = []; let  __tt_cur = "";  __tt_cur =  __tt_cur Add "Echo: ";  __tt_parts.push( __tt_cur);  __tt_cur = "";  __tt_values.push({  } input);  __tt_parts.push( __tt_cur) } baml.TaggedString { parts:  __tt_parts, values:  __tt_values } } ai.internal.assemble_llm_prompt( __spec_tagged_prompt.parts,  __spec_tagged_prompt.values) catch_all ( __prompt_render_err) { _ => throw ai.errors.PromptRenderError { message: "prompt template r...", cause:  __prompt_render_err } } }, toolbox: ai.tools.Toolbox.new([]), default_client: ai.clients.resolve(TestClient, (prefix: string, model: string) -> ai.Client? { match (prefix) { "openai" => openai.ResponsesClient.new(model = model), "openai-chat" => openai.ChatClient.new(model = model), "openai-images" => openai.ImageClient.new(model = model), "azure" => openai.AzureClient.new(model = model), "ollama" => openai.OllamaClient.new(model = model), "openrouter" => openai.OpenRouterClient.new(model = model), "anthropic" => anthropic.Client.new(model = model), "google" => google.GeminiClient.new(model = model), "vertex" => google.VertexClient.new(model = model), "bedrock" => aws.BedrockClient.new(model = model), "ai-gateway-images" => vercel.AiGatewayImageClient.new(model = model), "claude-code" => claude_code.ClaudeCodeClient.new(model = model), _ => null } }, ["openai", "openai-chat", "openai-images", "azure", "ollama", "openrouter", "anthropic", "google", "vertex", "bedrock", "ai-gateway-images", "claude-code"]) }
}
function user.LlmFunction@stream(input: string, client: ai.stream.StreamingClient? = null, on_event: (ai.events.Event) -> void? = null) -> ai.stream.Stream<string | null, string>  [expr] {
  ai.stream.from_spec(LlmFunction@spec(input), client = client, on_event = on_event)
}
function user.MatchExpression(x: int) -> string  [expr] {
  {  } match (x) { 1 => { // [1] One } "one", 2 => { // [1] Two } "two", _ => { // [1] Default } "other" }
}
function user.NestedControlFlow(x: int) -> string  [expr] {
  { // [1] Outer } if (x Gt 0) { // [1] Positive } if (x Gt 100) { // [1] Large } "large" else { // [1] Small } "small" else { // [1] Non-positive } "zero or negative"
}
function user.SimpleFunction() -> int  [expr] {
  {  } 42
}
function user.WhileWithHeaders() -> int  [expr] {
  { // [1] Initialize; let count = 0; // [1] Loop; while count Lt 10 { // [1] Iteration; count Add= 1 }; // [1] Done } count
}

--- captures ---
lambda ( __spec_output_format) in LlmFunction@spec: captures [input]
