baml_language/crates/baml_tests/snapshots/diagnostic_errors/control_flow/baml_tests__diagnostic_errors__control_flow__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.SimpleFunction() -> int throws never {
  { : 42
    42 : 42
  }
}
function user.Headers() -> string throws never {
  { : unknown
    // [1] Setup
    let x = 1 : 1 -> int
    // [2] Configuration
    let y = 2 : 2 -> int
    // [1] Processing
    let z = x + y : int
    z.to_string() : unknown
  }
  !! 319..335: type `int` has no member `to_string`
}
function user.IfElseWithHeaders(flag: bool) -> string throws never {
  { : "yes" | "no"
    // [1] Check flag
    if (flag : bool) : "yes" | "no"
      { : "yes"
        // [1] True branch
        "yes" : "yes"
      }
    else
      { : "no"
        // [1] False branch
        "no" : "no"
      }
  }
}
function user.ElseIfChain(x: int) -> string throws never {
  { : "one" | "two" | "three" | "other"
    if (x == 1 : bool) : "one" | "two" | "three" | "other"
      { : "one"
        // [1] Case one
        "one" : "one"
      }
    else
      if (x == 2 : bool) : "two" | "three" | "other"
        { : "two"
          // [1] Case two
          "two" : "two"
        }
      else
        if (x == 3 : bool) : "three" | "other"
          { : "three"
            // [1] Case three
            "three" : "three"
          }
        else
          { : "other"
            // [1] Default case
            "other" : "other"
          }
  }
}
function user.WhileWithHeaders() -> int throws never {
  { : int
    // [1] Initialize
    let count = 0 : 0 -> int
    // [1] Loop
    while count < 10
      { : void
        // [1] Iteration
        count Add= 1 : int
      }
    // [1] Done
    count : int
  }
}
function user.MatchExpression(x: int) -> string throws never {
  { : "one" | "two" | "other"
    match (x : int) : "one" | "two" | "other"
      1 =>
        { : "one"
          // [1] One
          "one" : "one"
        }
      2 =>
        { : "two"
          // [1] Two
          "two" : "two"
        }
      _ =>
        { : "other"
          // [1] Default
          "other" : "other"
        }
  }
}
function user.NestedControlFlow(x: int) -> string throws never {
  { : "large" | "small" | "zero or negative"
    // [1] Outer
    if (x > 0 : bool) : "large" | "small" | "zero or negative"
      { : "large" | "small"
        // [1] Positive
        if (x > 100 : bool) : "large" | "small"
          { : "large"
            // [1] Large
            "large" : "large"
          }
        else
          { : "small"
            // [1] Small
            "small" : "small"
          }
      }
    else
      { : "zero or negative"
        // [1] Non-positive
        "zero or negative" : "zero or negative"
      }
  }
}
function user.TestClient$new() -> ? throws never {
  baml.llm.PrimitiveClient { name: "TestClient", provider: "openai", options: baml.llm.PrimitiveClientOptions { model: "gpt-4", base_url: null, allowed_role_metadata: null, finish_reason_allow_list: null, finish_reason_deny_list: null, supports_streaming: null, default_role: null, allowed_roles: null, remap_roles: null, api_key: null, provider_options: null, media_url_handler: null, headers: map {  }, query_params: map {  }, request_body: map {  } } } : baml.llm.PrimitiveClient
}
function user.LlmFunction(input: string) -> string throws never {
  baml.llm.call_llm_function<T>(TestClient, "LlmFunction", map { "input": input }) : string
}
function user.LlmFunction$render_prompt(input: string) -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(TestClient, "LlmFunction", map { "input": input }) : baml.llm.PromptAst
}
function user.LlmFunction$build_request(input: string) -> baml.http.Request throws never {
  baml.llm.build_request(TestClient, "LlmFunction", map { "input": input }) : baml.http.Request
}
function user.LlmFunction$build_request_stream(input: string) -> baml.http.Request throws never {
  baml.llm.build_request_stream(TestClient, "LlmFunction", map { "input": input }) : baml.http.Request
}
function user.LlmFunction$parse(json: string) -> string throws never {
  baml.llm.parse<T>("LlmFunction", json) : string
}
function user.LlmFunction$stream(input: string) -> baml.llm.Stream<string, null | string> throws never {
  baml.llm.stream_llm_function(TestClient, "LlmFunction", map { "input": input }) : baml.llm.Stream<string, null | string>
}
function user.LlmFunction$parse_stream(sse: baml.http.SseStream) -> baml.llm.Stream<string, null | string> throws never {
  TestClient.__make_stream(sse, "LlmFunction") : unknown
}
