baml_language/crates/baml_tests/snapshots/diagnostic_errors/control_flow/baml_tests__diagnostic_errors__control_flow__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 28759
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type `int` has no member `to_string`
    ╭─[ main.baml:15:19 ]
    │
 15 │ ╭─▶     let z = x + y;
 16 │ ├─▶     z.to_string()
    │ │                       
    │ ╰─────────────────────── type `int` has no member `to_string`
    │     
    │     Note: Error code: E0007
────╯
